--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,12 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}",
-      "args": []
+      "args": [
+        "-port",
+        "8080",
+        "-redirectURL",
+        "localhost"
+      ],
     }
   ]
 }
